# Parmetis_Testing

./: kokkos-install.sh
MATAR/: aliases.h  macros.h
include/: distributed_array.h  mesh.h
parmetis/: parmetis_install.sh
src/: CMakeLists.txt  build.sh  parmetis_test.cpp  petsc_test.cpp
src2/: CMakeLists.txt  bird.msh  build.sh  mesh_convert.py  petsc_test.cpp
